<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >
    
   <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView
			    android:id="@+id/mainSetting"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/add_daily_plan"
			    android:textSize="20sp" />
		    
		</LinearLayout>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:background="@color/red"
	        />
	    
    </LinearLayout>
    <ScrollView
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:orientation="vertical">
		
	        <EditText
	            android:id="@+id/addPlanName"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:background="@drawable/edit_shape"
	            android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
	            android:hint="@string/input_plan_name"
	            android:textSize="22sp" />

		
		    <TextView
                android:id="@+id/input_begin_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/first_time"
                android:textSize="20sp" />
        	<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" 
	            android:baselineAligned="false"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
	            android:layout_gravity="center_vertical" >
	
	            <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal" 
		            android:layout_weight="1"
		            android:layout_gravity="center_vertical" >
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:gravity="center"
		                android:layout_marginRight="5dp"
		                android:text="@string/input_begin_time"
		                android:textSize="20sp" />
		       		<EditText
		       		    android:id="@+id/first_begin"
		                android:layout_width="match_parent"
		                android:layout_height="35dp"
		                android:layout_gravity="center"
		                android:background="@drawable/edit_shape"
		                android:gravity="center"
		                android:hint="@string/input_select_begin" />
		       		</LinearLayout>
				<LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:orientation="horizontal" 
		            android:layout_gravity="center_vertical" >
			        <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:layout_marginLeft="5dp"
		                android:layout_marginRight="5dp"
		                android:text="@string/input_end_time"
		                android:textSize="20sp" />
		
		            <EditText
		       		    android:id="@+id/first_end"
		                android:layout_width="match_parent"
		                android:layout_height="35dp"
		                android:hint="@string/input_select_end"
		                android:layout_gravity="center"
		                android:background="@drawable/edit_shape"
		                android:gravity="center" />
       			</LinearLayout>
	    	</LinearLayout>	
	    	<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/second_time"
                android:textSize="20sp" />
        	<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" 
	            android:baselineAligned="false"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
	            android:layout_gravity="center_vertical" >
	
	            <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal" 
		            android:layout_weight="1"
		            android:layout_gravity="center_vertical" >
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:gravity="center"
		                android:layout_marginRight="5dp"
		                android:text="@string/input_begin_time"
		                android:textSize="20sp" />
		       		<EditText
		       		    android:id="@+id/second_begin"
		                android:layout_width="match_parent"
		                android:layout_height="35dp"
		                android:layout_gravity="center"
		                android:background="@drawable/edit_shape"
		                android:gravity="center"
		                android:hint="@string/input_select_begin" />
		       	</LinearLayout>
				<LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:orientation="horizontal" 
		            android:layout_gravity="center_vertical" >
			        <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:layout_marginLeft="5dp"
		                android:layout_marginRight="5dp"
		                android:text="@string/input_end_time"
		                android:textSize="20sp" />
		
		            <EditText
		       		    android:id="@+id/second_end"
		                android:layout_width="match_parent"
		                android:layout_height="35dp"
		                android:hint="@string/input_select_end"
		                android:layout_gravity="center"
		                android:background="@drawable/edit_shape"
		                android:gravity="center" />
		        </LinearLayout>
	    	</LinearLayout>	    

		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:orientation="horizontal" >

		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_weight="1"
		            android:layout_marginRight="5dp"
		            android:gravity="center"
		            android:text="@string/input_begin_time"
		            android:textSize="20sp" />

		        <EditText
		            android:id="@+id/course_num"
		            android:layout_width="wrap_content"
		            android:layout_height="35dp"
		            android:layout_gravity="center"
		            android:layout_weight="1"
		            android:background="@drawable/edit_shape"
		            android:gravity="center"
		            android:hint="@string/input_select_begin" />
		    </LinearLayout>

		    <EditText
	            android:id="@+id/input_plan_address"
	            android:layout_width="match_parent"
	            android:layout_height="35dp"
	            android:layout_marginBottom="5dp"
	        	android:layout_marginTop="5dp"
	            android:layout_gravity="center"
	            android:background="@drawable/edit_shape"
	            android:gravity="center"
	            android:hint="@string/input_plan_address"
	            android:textSize="20sp" />
		    <Button
	            android:id="@+id/mapDisplay"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dp"
	        	android:layout_marginTop="5dp"
	            android:background="@drawable/button_onoff_indicator_off"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:layout_gravity="center"
	            android:text="@string/map_display" 
	            />
	    </LinearLayout>
	</ScrollView>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0"
	    android:baselineAligned="false"
	    android:gravity="right"
	    android:orientation="horizontal">
	    <LinearLayout
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center">
		    <Button
	            android:id="@+id/input_cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_onoff_indicator_off"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_gravity="center"
	            android:text="@string/input_cancel_plan" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center">
		    <Button
	            android:id="@+id/input_save"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_onoff_indicator_off"
	            android:layout_gravity="center"
	            android:text="@string/input_save_plan" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>